infrastructure/postgres-service.yml

apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
    app: postgres
