infrastructure/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: nginx
    # app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
